# gnn_experiments

./: cora.py  install_pytorch_packages.sh  pyproject.toml  setup_env.sh
models/: gnn_model.py  mlp_model.py  node_level_classifier.py
stellar_graph_demo/: train_gnn.py  train_mlp.py  visualisation.py
stellar_graph_demo/baseline/: train_mlp_functions.py
stellar_graph_demo/gnn/: train_gnn_functions.py
training/: train_model.py
