[tool.poetry]
name = "gnn_workshop"
version = "2.2.0"
repository = "None"
description = "StellarGraph Demo"
keywords=[ "graph neural network", "data science", "gnn"]
license = "Proprietary"
readme = "README.md"
authors = ["Kefei <kefei@nate.tech>"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    "Programming Language :: Python :: 3"
    ]

[tool.poetry.dependencies]
python = "^3.8.5"
stellargraph = "^1.2.1"
numpy = "^1.19.5"
pandas = "^1.2.3"
scikit-learn = "^0.24.2"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
